1.update doc api.
